@@ -4,6 +4,11 @@
 
 - Made Specio classes faster by inlining all accessors and constructors.
 
+- Added support for Moo. Specio constraints now overloading sub-ification so
+  you can pass them as "isa" values for Moo attributes. Also added a new
+  $type->coercion_sub() method which returns a sub ref suitable for the
+  "coerce" value.
+
 
 0.09     2014-05-25
 
